# banyanfs

./: .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yaml
examples/: full_fs_exercise.rs
fixtures/: minimal.bfs
js/: banyanfs.js
public/: index.html
src/: error.rs  lib.rs  main.rs  utils.rs  version.rs
src/api/: api_client.rs  mod.rs
src/api/client/: api_auth.rs  auth.rs  direct_response.rs  error.rs  expiring_token.rs  mod.rs  platform_token.rs  storage_host.rs  storage_host_auth.rs  traits.rs  utils.rs
src/api/client/utils/: mod.rs  vec_stream.rs
src/api/platform/: api_drive.rs  api_drive_metadata.rs  api_metadata.rs  api_snapshot.rs  drive_kind.rs  drives.rs  mod.rs  storage_class.rs
src/api/platform/account/: create_api_key.rs  create_user_key.rs  current_usage.rs  current_usage_limit.rs  get_storage_grant.rs  mod.rs  register_api_key.rs  rename_user_key.rs  user_key_access.rs
src/api/platform/blocks/: locate_request.rs  mod.rs
src/api/platform/drive_access/: get_all_request.rs  mod.rs  revoke.rs
src/api/platform/drive_keys/: get_all_request.rs  mod.rs
src/api/platform/drives/: create_request.rs  delete_request.rs  get_all_request.rs  get_request.rs  mod.rs  update_request.rs
src/api/platform/metadata/: get_all_request.rs  get_request.rs  mod.rs  pull_request.rs  push_request.rs
src/api/platform/models/: api_drive.rs  api_drive_access.rs  api_drive_key.rs  api_key.rs  api_metadata.rs  api_snapshot.rs  api_user_key.rs  api_user_key_access.rs  mod.rs
src/api/platform/requests/: create_drive_request.rs  get_all_drives_request.rs  mod.rs
src/api/platform/requests/account/: current_usage.rs  current_usage_limit.rs  mod.rs  register_api_key.rs
src/api/platform/requests/drives/: create_request.rs  delete_request.rs  get_all_request.rs  get_request.rs  mod.rs  update_request.rs
src/api/platform/requests/metadata/: get_current_request.rs  mod.rs  pull_current_request.rs
src/api/platform/requests/snapshots/: mod.rs
src/api/platform/snapshots/: create_request.rs  get_all_request.rs  get_all_snapshots_request.rs  mod.rs  restore_request.rs
src/api/platform/status/: get_public_key.rs  mod.rs
src/api/storage_host/: mod.rs
src/api/storage_host/auth/: mod.rs  register_grant_request.rs  who_am_i_request.rs
src/api/storage_host/blocks/: create_session_request.rs  mod.rs  retrieve_request.rs  store_request.rs
src/codec/: actor_id.rs  cid.rs  filesystem_id.rs  mod.rs  segment_streamer.rs  utils.rs
src/codec/content_payload/: cid.rs  content_options.rs  history_end.rs  history_start.rs  key_access_settings.rs  mod.rs  permission_control.rs
src/codec/crypto/: access_key.rs  asym_locked_access_key.rs  authentication_tag.rs  encrypted_buffer.rs  encrypted_stream.rs  fingerprint.rs  hash.rs  key_id.rs  locked_access_key.rs  mod.rs  nonce.rs  permission_keys.rs  signature.rs  signing_key.rs  sym_locked_access_key.rs  verifying_key.rs
src/codec/data_storage/: data_block.rs  data_chunk.rs  data_options.rs  encrypted_data_chunk.rs  mod.rs
src/codec/filesystem/: attribute.rs  block_kind.rs  directory_permissions.rs  file_permissions.rs  filesystem_permissions.rs  mod.rs  node_kind.rs  node_type.rs  permissions.rs
src/codec/header/: content_options.rs  data_block.rs  data_header.rs  encrypted_content_payload_entry.rs  filesystem_id.rs  format_header.rs  identity_header.rs  key_access_settings.rs  key_count.rs  mod.rs  permission_control.rs  public_settings.rs
src/codec/header/access_mask/: builder.rs  mod.rs
src/codec/header/data_block/: data_options.rs  mod.rs
src/codec/meta/: actor_id.rs  actor_settings.rs  block_size.rs  cid.rs  content_context.rs  filesystem_id.rs  journal_checkpoint.rs  meta_key.rs  mod.rs  permanent_id.rs  user_agent.rs  vector_clock.rs
src/codec/meta/vector_clock/: actor.rs  clock_inner.rs  filesystem.rs  filesystem_actor.rs  mod.rs  node.rs  node_actor.rs  snapshot.rs
src/codec/parser/: mod.rs  parser_state_machine.rs  progress_type.rs  segment_streamer.rs  state_error.rs
src/crypto/: access_key.rs  authentication_tag.rs  encrypted_payload.rs  escrowed_access_key.rs  mod.rs  nonce.rs  signature.rs  signing_key.rs  symmetric_key.rs  utils.rs  verifying_key.rs
src/filesystem/: actor_settings.rs  content_reference.rs  data_block.rs  directory_handle.rs  drive.rs  drive_access.rs  drive_loader.rs  entry.rs  entry_builder.rs  file_content.rs  filesystem_id.rs  mod.rs  operations.rs  permissions.rs  private_encoding_context.rs  vector_clock.rs
src/filesystem/drive/: access.rs  data_store.rs  directory_entry.rs  directory_handle.rs  drive_context.rs  file_handle.rs  inner.rs  loader.rs  mod.rs  operations.rs  walk_state.rs
src/filesystem/nodes/: cid_cache.rs  directory.rs  encoded_cache.rs  file.rs  mod.rs  node.rs  node_builder.rs  node_context.rs  node_data.rs  node_kind.rs  node_name.rs  node_type.rs
src/filesystem/nodes/metadata/: mime_type.rs  mod.rs
src/filesystem/nodes/node_data/: child_map.rs  mod.rs
src/parser/: cid.rs  mod.rs
src/parser/content_payload/: access_key.rs  escrowed_access_key.rs  mod.rs
src/parser/crypto/: access_key.rs  authentication_tag.rs  key_id.rs  mod.rs  nonce.rs  verifying_key.rs
src/parser/header/: data_header.rs  filesystem_id.rs  format.rs  format_header.rs  identity.rs  mod.rs  public_settings.rs
src/stores/: local_data_store.rs  memory_data_store.rs  memory_sync_tracker.rs  mod.rs  traits.rs
src/stores/api_syncable_store/: inner.rs  mod.rs
src/wasm/: data_storage.rs  mod.rs  utils.rs
src/wasm/browser_store/: indexed_db_sync_tracker.rs  mod.rs  web_fs_data_store.rs
src/wasm/tomb_compat/: mod.rs  wasm_bucket.rs  wasm_bucket_key.rs  wasm_bucket_metadata.rs  wasm_bucket_mount.rs  wasm_bucket_snapshot.rs  wasm_fs_metadata_entry.rs  wasm_mount.rs  wasm_node_metadata.rs  wasm_shared_file.rs  wasm_snapshot.rs  wasm_user_key.rs  wasm_user_key_access.rs
src/wasm/tomb_compat/models/: mod.rs  tomb_bucket.rs
tests/: browser.rs  integration.rs
