[package]
name = "banyanfs"
description = "A first pass implmentation of a BanyanFS format and platform client all-in-one. Spec reference implementation."
repository = "https://github.com/banyancomputer"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2021"

[features]
default = ["strict"]
strict = []

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
tracing = "^0.1"

blake3 = { version = "^1", features = ["traits-preview"] }
chacha20poly1305 = "^0.10"
ecdsa = { version = "^0.16", features = ["signing", "verifying"] }
elliptic-curve = { version = "^0.13", features = ["ecdh", "sec1"] }
p384 = { version = "^0.13", features = ["ecdh", "ecdsa"] }
rand = "^0.8"
rand_chacha = "^0.3"
sha2 = "^0.10"

bytes = "^1"
uuid = { version = "^1", features = ["v7", "serde"] }
nom = "^7"
crdts = { version = "^7", default-features = false, features = [
  "merkle",
  "num",
] }
time = "^0.3"
tokio-util = { version = "^0.7", features = ["compat", "io"] }

[[bin]]
name = "banyanfs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "^0.1"
getrandom = { version = "^0.2", features = ["js"] }
js-sys = "^0.3"
tracing-wasm = "^0.2"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1", features = ["full"] }
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = [
  "env-filter",
  "fmt",
  "time",
] }

[build-dependencies]
time = { version = "^0.3", features = ["formatting"] }
